Update CSV link in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <script>
     // 1. PLACE YOUR PUBLISHED CSV LINK HERE
-    const csvUrl = 'YOUR_PUBLISHED_CSV_LINK_HERE';
+    const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRR4JXxJLCTe_P6-il5qzS-oKP8gU_1jYkCHGHH0tYVoejVgMXl3CGifcgC603ZiVLOAl53zL_u9P83/pub?output=csv';
 
     async function init() {
         try {
