--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
         header h1 { margin: 0; font-size: 1rem; font-weight: 500; }
 
         .search-container { padding: 6px 10px; background: #fff; border-bottom: 1px solid var(--border); position: sticky; top: 37px; z-index: 999; }
-        #searchInput { width: 100%; padding: 8px 15px; border-radius: 20px; border: 1px solid var(--border); font-size: 14px; outline: none; box-sizing: border-box; }
+        #searchInput { width: 100%; padding: 8px 15px; border-radius: 20px; border: 1px solid var(--border); font-size: 16px; outline: none; box-sizing: border-box; }
 
         .location-section { border-bottom: 1px solid var(--border); }
         .location-header { background: var(--light-bg); padding: 10px 12px; cursor: pointer; display: flex; justify-content: space-between; font-size: 0.95rem; font-weight: 700; align-items: center; border-bottom: 1px solid var(--border); }
         
         .location-content { display: none; }
         
-        /* Flexbox ensures Name takes available space and Phone stays fixed */
+        /* Grid Layout: Name takes all space (1fr), Phone is fixed (125px) */
         .contact-row { 
-            display: flex; 
+            display: grid;
+            grid-template-columns: 1fr 125px; 
             align-items: center; 
             padding: 10px 12px; 
             border-bottom: 1px solid #f1f3f4; 
-            gap: 15px; /* Space between name and number */
-            justify-content: space-between;
+            gap: 10px;
         }
 
         .display-text { 
@@ -34,8 +34,8 @@
             font-weight: 500; 
             overflow: hidden; 
             text-overflow: ellipsis; 
-            white-space: nowrap;
-            flex: 1; /* Allows name to take all remaining space */
+            white-space: nowrap; /* Prevents name from wrapping */
+            min-width: 0; /* Required for ellipsis to work in grid */
         }
 
         .phone-link { 
@@ -43,11 +43,10 @@
             color: var(--blue); 
             text-decoration: none; 
             font-weight: 700;
-            flex-shrink: 0; /* Prevents the phone number from narrowing */
-            white-space: nowrap; /* Forces number onto one line */
+            white-space: nowrap; /* Absolute no-wrap for number */
             text-align: right;
             padding: 5px 0;
-            min-width: 110px; /* Adjust this if your numbers are longer/shorter */
+            display: block;
         }
 
         .chevron::after { content: '▼'; font-size: 0.6rem; color: var(--gray); }
@@ -127,7 +126,7 @@
             let match = false;
             s.querySelectorAll('.contact-row').forEach(r => {
                 const hit = r.getAttribute('data-search').toLowerCase().includes(q);
-                r.style.display = hit ? 'flex' : 'none';
+                r.style.display = hit ? 'grid' : 'none'; // Changed to 'grid' to maintain layout
                 if(hit) match = true;
             });
             s.style.display = (q === "" || match) ? 'block' : 'none';
