--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MRA Directory</title>
+    <title>RAR Directory</title>
     <style>
         :root { --dark: #3c4043; --blue: #1a73e8; --navy: #003366; --green: #28a745; --gray: #70757a; --border: #dadce0; --light-bg: #f8f9fa; }
         body { font-family: -apple-system, system-ui, sans-serif; margin: 0; padding: 0; background: #fff; color: var(--dark); -webkit-tap-highlight-color: transparent; }
@@ -70,7 +70,7 @@
 </head>
 <body>
 
-<header><h1>MRA Phone Directory</h1></header>
+<header><h1>RAR Phone Directory</h1></header>
 <div id="tabs" class="tabs-wrapper"></div>
 <div class="search-container">
     <div class="search-wrapper">
@@ -81,7 +81,7 @@
 <div id="directory"><div id="loading">Connecting...</div></div>
 
 <script>
-    const csvUrl = 'YOUR_PUBLISHED_CSV_LINK_HERE';
+    const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRR4JXxJLCTe_P6-il5qzS-oKP8gU_1jYkCHGHH0tYVoejVgMXl3CGifcgC603ZiVLOAl53zL_u9P83/pub?output=csv';
     let fullData = [];
     let currentCategory = "All";
 
